解决pom包冲突无法启动问题